Add extract-file handling for various folder structure

--- a/templates/start.html
+++ b/templates/start.html
@@ -92,8 +92,8 @@
                     <h4 class="mb-4"> We introduce <span style="color: purple; font-weight: bold;">PETGUI</span>: A user-friendly interface for training and testing a language model through <b>P</b>attern <b>E</b>xploiting <b>T</b>raining (PET).<br>
                     </h4>
                     <h4 class="mb-4" style="font-style: italic; background: rgb(86, 106, 238, 0.2);" align="center">Pattern Exploiting Training</h4>
-                    <p style="font-size: 15px;"><span style="font-style: italic">PET</span> was introduced in 2020 as a <strong>semi-supervised training strategy for language models</strong>.
-                        By reformulating input examples as cloze-style phrases, <span style="font-style: italic">PET</span> has been shown to significantly outperform standard supervised training.
+                    <p style="font-size: 15px;"><span style="font-style: italic">PET</span> is introduced as a <strong>semi-supervised training strategy for language models</strong>.
+                        By reformulating input examples as cloze-style phrases, <span style="font-style: italic">PET</span> is shown to significantly outperform standard supervised training.
                    <section class="container" style="margin-top: 15px;">
                     <div id="col-1">
                         <figure>
