--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
                 {% endif %}
                 <div class="card-body">
                     <form method="POST" id="my-form" enctype="multipart/form-data">
-  <label for="file"><span class="circle">1.</span> <h5>Upload csv data in a zip file. The uploaded zip file contains the train and test dataset in csv format and a readme file</h5></label>
+                        <label for="file"><span class="circle">1.</span> <h5>Please upload your <strong>German</strong> training data zip file with <span style="font-style: italic">.tar.gz</span> extension, containing <span style="font-style: italic">train.csv, test.csv and unlabeled.csv</span></h5></label>
   <div style="display: flex; align-items: center;">
       <label for="file-uploader" class="btn btn--radius-2 btn--blue">Upload</label>
     <input type="file" accept=".gz" style="display: none;" id="file-uploader" name="file" required>
