--- a/templates/next.html
+++ b/templates/next.html
@@ -35,6 +35,33 @@
 </head>
 
  <script>
+
+let isRedirecting = false;
+
+// Function to handle the beforeunload event
+function handleBeforeUnload(event) {
+  // Display the confirmation message only if not redirecting
+  if (!isRedirecting) {
+    event.preventDefault();
+    event.returnValue = ''; // For older browsers
+    return ''; // For modern browsers
+  }
+}
+
+// Function to set the redirection flag when a link is clicked
+function handleLinkClick() {
+  isRedirecting = true;
+}
+
+function handleUnload() {
+    Logout();
+}
+
+// Attach event listeners
+window.addEventListener('beforeunload', handleBeforeUnload);
+document.addEventListener('click', handleLinkClick);
+window.addEventListener('unload', handleUnload);
+
     function showLoading() {
 			document.getElementById("spinner").style.display = "block";
 		}
