--- a/templates/index.html
+++ b/templates/index.html
@@ -135,7 +135,7 @@ var dynamicInput_1 = [];
 
 
                         <span class="circle">4.</span><div class="form-row m-b-55">
-                            <div class="name">Verbalizer mappings:</div>
+                            <div class="name">Define verbalizers:</div>
                             <div class="value">
                                 <div class="row row-space" id = 'formularmap' >
                             </div>
