Modify the input field plus button and minus button

--- a/templates/index.html
+++ b/templates/index.html
@@ -121,17 +121,16 @@ var dynamicInput_1 = [];
                                 </div>
                             </div>
                         </div><span class="circle">3.</span>
-                        <div class="form-row"id="formulario">
-                            <div class="name">Define templates:</div>
-                            <div class="value" id = "template input">
-                                <div id="dynamicInput[0]">
-                                <div class="input-group">
-                                    <input class="input--style-5 form-control" type="text" placeholder = "Example: It was_." name="template_0" required>
-                                    <button class="btn btn--radius-2 btn--blue" style="padding: 0 25px;" type ="button" onClick="addInput_new();">+</button>
-                                    </div>
-                                    </div>
-                                </div>
-                            </div>
+                     <div class="form-row" id="formulario">
+    <div class="name">Define templates:</div>
+    <div class="value" id="template input">
+        <div id="dynamicInput_0" class="input-group">
+            <input class="input--style-5 form-control" type="text" placeholder="Example: It was_." name="template_0" required>
+            <button class="btn btn--radius-2 btn--blue add-btn" style="padding: 0 25px;" type="button" onClick="addInput_new();">+</button>
+        </div>
+    </div>
+</div>
+
 
 
                         <span class="circle">4.</span><div class="form-row m-b-55">
