--- a/templates/final_page.html
+++ b/templates/final_page.html
@@ -43,7 +43,7 @@
 
     <div class="card-body" id="container"><span class="circle_1">1.</span>
         <label class="btn btn--radius-2 btn--blue">
-              Upload unlabeled data as a csv file
+              Upload unlabeled data as a txt file
         <input type="file" accept=".txt" name="file_final" id="file_final" style="display:none;">
         </label>
         <div id="feedback_file"></div>
