Fix Abort Training

--- a/templates/next.html
+++ b/templates/next.html
@@ -146,7 +146,7 @@ function showTable(jsonData) {
                 </div>
                      <div class="card-body" id="container">
           <a href="#" id="test"><div class="button-container">
-       <button id="trainButton" onclick="document.getElementById('test').style.pointerEvents = 'none'; startTraining(); disableButton(); showLoading(); showText();" class="btn btn--radius-2 btn--blue">
+       <button id="trainButton" onclick="document.getElementById('test').style.pointerEvents = 'none'; startTraining(); showAbort(); disableButton(); showLoading(); showText();" class="btn btn--radius-2 btn--blue">
         Start Training
        </button></div></a>
       <div class="button-container" style="display: none;" id="abortButton">
