Add Login click test

--- a/templates/start.html
+++ b/templates/start.html
@@ -84,7 +84,7 @@
                         <button class="btn logout-btn logout-btn:hover" onclick="Logout();">LOGOUT <i class="fa fa-power-off"></i></button>
                         <button class="btn login-btn login-btn:hover" onclick="window.location.href = '/basic';">PROCEED <i class="fa fa-sign-in"></i></button>
                     {% else %}
-                        <button class="btn login-btn login-btn:hover" onclick="Login();">LOGIN <i class="fa fa-sign-in"></i></button>
+                        <button class="btn login-btn login-btn:hover" id="login" onclick="Login();">LOGIN <i class="fa fa-sign-in"></i></button>
                     {% endif %}
                 </div>
                 <div class="card-body">
