--- a/templates/next.html
+++ b/templates/next.html
@@ -220,7 +220,7 @@ const animateProgress = () => {
 
     </script>
 
-  <div class="card-body" id="table-container">
+  <div id="table-container">
        <button id="resultsButton" onclick="loadJSON()" class="btn btn--radius-2 btn--blue" disabled>
          Show Results</button>
   <p id='showData'></p>
