--- a/templates/index.html
+++ b/templates/index.html
@@ -101,11 +101,11 @@
                             <label class="name">Define your language model:</label><div class="m-r-45"></div>
                             <div class="p-t-15">
                                 <label class="radio-container m-r-55"><span></span>gbert-base
-                                    <input type="radio" checked="checked" name="model_para" value="gbert-base" required>
+                                    <input type="radio" checked="checked" name="m_para" value="gbert-base" required>
                                     <span class="checkmark"></span>
                                 </label>
                                 <label class="radio-container">medbertde
-                                    <input type="radio" name="model_para" value="/prj/doctoral_letters/PETGUI/med_bert_local" required>
+                                    <input type="radio" name="m_para" value="/prj/doctoral_letters/PETGUI/med_bert_local" required>
                                     <span class="checkmark"></span>
                                 </label>
                             </div>
