--- a/templates/start.html
+++ b/templates/start.html
@@ -115,7 +115,7 @@
                             <li><strong>Label</strong> data using the trained model</li>
                             <li>View statistics on <b>model performance</b> during training
                             <li> Download the <strong>labeled</strong> data</li>
-                            <li>View <b>label distribution statistics</b> of training data and labeled data</li>
+                            <li>View <b>label distribution statistics</b> of the training data</li>
                         </ul>
                     <h3 class="mb-4" style="margin-top: 3rem; background: rgb(86, 106, 238, 0.2);">Getting Started</h3>
                     <p style="font-size: 15px;">To begin using <span style="color: purple; font-weight: bold;">PETGUI</span>, please make sure you have a <strong>working WireGuard VPN connection</strong> to the <span style="font-style: italic">DieterichLab</span> infrastructure.
