Adapt to docker user

--- a/templates/next.html
+++ b/templates/next.html
@@ -175,7 +175,7 @@ function showTable(jsonData) {
                                     </div>
                                 </div>
         <span class="spinner" id="spinner"></span>
-        <div class="loadingText" id="loadingText"> Please wait...</div>
+        <div class="loadingText" id="loadingText"> Please wait, this is going to take a while.<br>You might consider grabbing yourself something in the meantime.<br>☕</div>
 
                          <script>
     let steps;
