Adapt to docker user

--- a/templates/final_page.html
+++ b/templates/final_page.html
@@ -61,7 +61,7 @@
           </button></div>
 
         <span class="spinner" id="spinner"></span>
-        <div class="loadingText" id="loadingText"> Please wait, this is going to take a while.<br>You might consider grabbing yourself something in the meantime.<br>☕</div>
+        <div class="loadingText" id="loadingText"> Please wait…</div>
         </div>
 
     <div class="card-body" id="container"><span class="circle_1">3.</span>
